--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "cheerio-without-node-native": "^0.20.2",
+    "moment": "^2.19.4",
     "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react-native": "0.51.0",
+    "react-native-vector-icons": "^4.4.2",
+    "react-native-webview2": "^1.1.1",
+    "react-navigation": "^1.0.0-beta.21"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
