--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "react-test-renderer": "16.0.0"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-native|react-navigation|react-native-tab-view|react-native-vector-icons|react-native-webview2)/)"
+    ]
   }
 }
